Task5/teamb/defaultdeny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-b-default-deny
  namespace: team-b
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
