Task5/teamb/teamballow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-b-allow-same-namespace
  namespace: team-b
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: team-b
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: team-b
